<resources>
    <string name="app_name">ContractFox</string>
    <string name="title_activity_login">Sign in</string>

    <!--<string name="google_api_key">AIzaSyDCihFEyqxkLPQZ8XBggYT8C7-cwUr3790</string>-->
    <!-- INTRODUCTION -->
    <string name="intro">Need to find a reliable contractor fast? Try ContractFox now!</string>
    <!-- END OF INTRODUCTION -->

    <!-- REGISTER -->
    <string name="register_button_login_activity">Register</string>
    <!-- END OF REGISTER -->

    <!-- LOGIN -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_street_address">Enter a valid address</string>
    <string name="error_unit_apt">Enter a valid apt/unit number</string>
    <string name="error_city">Enter a valid city</string>
    <string name="error_state">Choose a valid state</string>
    <string name="error_zip_code">Enter a valid zip code</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- END OF LOGIN -->

    <!-- MAPS -->
    <!--<string name="google_maps_key">AIzaSyAQ6SkMMgMOTbTnfAJnjXJQA77idfpL1OU</string>-->
    <!-- END OF MAPS -->

    <string name="title_activity_home">Home Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_drawer">ContractFox</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="register_activity_email_error">Enter Valid Email</string>
    <string name="register_activity_password_error">Enter a valid password with at least 6 characters</string>
    <string name="register_activity_repeat_password_error">not identical</string>
    <string name="register_contractor_fragment_firstName_error">Enter valid first name</string>
    <string name="register_contractor_fragment_lastName_error">Enter valid last name</string>
    <string name="register_contractor_fragment_companyName_error">Enter valid company name</string>
    <string name="register_contractor_fragment_description_error">Enter valid description</string>
    <string name="register_contractor_fragment_phone_error">Enter valid phone number</string>


    <!--&lt;!&ndash; TODO: Remove or change this placeholder text &ndash;&gt;-->
    <!--<string name="title_activity_view_profile">View Profile</string>-->
    <!--<string name="dummy_button">Dummy Button</string>-->
    <!--<string name="dummy_content">DUMMY\nCONTENT</string>-->
    <!--<string name="title_activity_exterior">exterior</string>-->
    <!--<string name="register_button_login_activity">Register</string>-->
    <!--<string name="sign_up_button_text">Sign Up</string>-->
    <!--<string name="intro">Looking for contractors I presume? \n\nUnfamiliar with construction language-->
    <!--and terms? \n \nFirst time doing a project on the house?\n\nwell then, you\'re in the right place!-->
    <!--\n\nLet\'s get started.</string>-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank estimate fragment</string>
    <string name="title_searchview_list">Items</string>
    <string name="title_searchview_detail">SearchView Detail</string>
    <string name="title_activity_google_directions">Map</string>
    <string name="business_name">Business Name goes here!</string>
    <string name="addresss">address</string>
    <string name="auth_failed"> Authentication Failed :-( </string>


    <!-- CONTRACTOR'S PROFILE -->
    <string name="company_name">Jacks Construction Co.</string>
    <string name="review_amount">45 reviews</string>
    <string name="estimate_button">Request an Estimate</string>
    <string name="direction">Directions</string>
    <string name="reviews">REVIEWS</string>
    <string name="title_activity_map_fragment">Map</string>
    <string name="address">151 Andrea Ln. Felton CA 95018</string>
    <string name="distance_miles">1.4 mi</string>
    <string name="call_button">Call</string>
    <string name="phone_number">(845)332-7029</string>
    <string name="directions_text">Directions</string>
    <string name="skills_text">Manage Skills</string>
    <string name="skills">View Skills</string>
    <string name="url_name">www.jacksconstructionco.com</string>
    <string name="review_text">Read Reviews</string>
    <string name="leave_review">Leave a Review</string>
    <string name="my_reviews_text">My Reviews</string>
    <string name="next_symbol"> > </string>
    <string name="message_button">Message</string>
    <string name="pic_gallery_text">Before and After Photos</string>
    <!-- END OF CONTRACTOR'S PROFILE -->


    <string name="title_activity_estimate">EstimateActivity</string>
    <string name="large_text">Text goes here</string>
    <string name="title_activity_skill_set">SkillSetActivity</string>
    <string name="title_activity_reviews">ReviewsActivity</string>
    <string name="title_activity_maps">Map</string>


    <!-- PRICE ESTIMATE -->
    <string name="step1">STEP 1</string>
    <string name="step2">STEP 2</string>
    <string name="step3">STEP 3</string>
    <string name="step4">STEP 4</string>
    <!-- STEP 1 -->
    <string name="project_title">Enter Project Title...</string>
    <string name="location_selection">Project\'s Location</string>
    <string name="interior">Interior</string>
    <string name="exterior">Exterior</string>
    <string name="backyard">Backyard</string>
    <string name="specific_area">Let\'s narrow down the location a bit more.</string>
    <string name="kitchen">Kitchen</string>
    <string name="bathroom">Bathroom</string>
    <string name="attic">"Attic</string>
    <string name="basement">Basement</string>
    <string name="garage">Garage</string>
    <string name="livingroom">Living Room</string>
    <string name="bedroom">Bedroom</string>
    <string name="dinningroom">Dinning Room</string>
    <string name="closet">Closet</string>
    <string name="hallway">Hallway</string>
    <string name="utility_room">Utility Room</string>
    <string name="entrance">Entrance</string>
    <string name="other">Other</string>
    <string name="first_floor">1st Floor</string>
    <string name="second_floor">2nd Floor</string>
    <string name="garage_unit">Garage Unit</string>
    <string name="roof">Roof</string>
    <string name="foundation">Foundation</string>
    <string name="addition">Addition</string>
    <string name="porch">Porch</string>
    <string name="balcony">Balcony</string>
    <string name="driveway">Driveway</string>
    <string name="pool_jacuzzi">Pool/Jacuzzi</string>
    <string name="septic_system">Septic System</string>
    <string name="trees">Trees</string>
    <string name="shed">Shed</string>
    <string name="landscape">Landscape</string>
    <string name="well">Well</string>
    <string name="fence">Fence</string>
    <!-- STEP 2 -->
    <string name="measurements_description">Item/Area Dimensions &amp; Specs</string>
    <string name="measurements">Provide detailed item or area dimensions &amp; specifications in a few sentences.</string>
    <!-- STEP 3 -->
    <string name="project_description">Detailed Project Description</string>
    <string name="project_description_holder">Enter a detailed project description...</string>
    <!-- STEP 4 -->
    <string name="question1">Will you provide your own materials?</string>
    <string name="question2">Will you need material delivery?</string>
    <string name="upload">Upload a photo</string>
    <string name="img_picture_text">Take a Picture</string>
    <string name="img_upload_text">Upload an Image</string>
    <!-- END OF PRICE ESTIMATE -->


    <!--String for contractor_availability_fragments-->
    <string name="cancel_button_dialog_editText">Cancel</string>
    <string name="hint_dialog_editText">Enter a new task</string>
    <string name="dialogBox_pick_a_time_header">Pick A time</string>
    <string-array name="time_availability_list">
        <item>9:00AM-2:00PM</item>
        <item>3:00PM-8:00PM</item>
    </string-array>
    <string name="saveBookingTimeText">save booking</string>
    <string name="dialog_title_edit_contract_contractor">Pick an option</string>
    <string name="edit_contract_option">Edit Contract</string>
    <string name="delete_contract_option">Delete Contract</string>
    <string name="dialog_ok_contract_edit">OK</string>
    <string name="edit_description_dialog_title">Edit Description</string>
    <string name="edit_description_dialog_hint">New Description</string>
    <string name="edit_description_dismiss_dialog_button_text">Cancel</string>
    <string name="edit_description_positive_button_text">OK</string>

    <!--For skillsets-->
    <!--Interior-->
    <string name="attic_skill">Attic</string>
    <string name="basement_skill">Basement</string>
    <string name="bathroom_skill">Bathroom</string>
    <string name="garage_skill">Garage</string>
    <string name="living_room_skill">Living Room</string>
    <string name="kitchen_skill">Kitchen</string>


    <!--Exterior-->
    <string name="ac_heat_skill">AC/Heat</string>
    <string name="chimney_skill">Chimney</string>
    <string name="deck_patio_skill">Deck and Patio</string>
    <string name="doors_skill">Doors</string>
    <string name="foundation_skill">Foundation</string>
    <string name="roof_skill">Roof</string>
    <string name="walls_skill">Walls</string>
    <string name="windows_skill">Windows</string>

    <!--Backyard-->
    <string name="driveway_skill">Driveway</string>
    <string name="fence_skill">Fence</string>
    <string name="gazebo_skill">Gazebo</string>
    <string name="landscape_skill">Landscape</string>
    <string name="pool_jacuzzi_skill">Pool and Jacuzzi</string>
    <string name="septic_tank_skill">Septic Tank</string>
    <string name="tree_skill">Tree</string>
    <string name="well_skill">Well</string>

    <string name="interior_skill">Interior Skills</string>
    <string name="exterior_skill">Exterior Skills</string>
    <string name="backyard_skill">Backyard Skills</string>
    <string name="choose_skills">Choose one or more skills:</string>


    <!--navigation_drawer_menu-->
    <string name="navigation_drawer_availability_string">My Availability</string>


</resources>
