<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jakubkalinowski.contractfoxandroid.EstimateActivity"
    tools:showIn="@layout/content_estimate">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18dp"
            android:text="@string/specific_area"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <CheckBox
                android:layout_width="0dp"
                android:layout_weight=".33"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/first_floor"
                android:id="@+id/checkbox_first_floor"/>

            <CheckBox
                android:layout_width="0dp"
                android:layout_weight=".33"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/second_floor"
                android:id="@+id/checkbox_second_floor"/>

            <CheckBox
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight=".33"
                android:textSize="16dp"
                android:text="@string/roof"
                android:id="@+id/checkbox_roof"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <CheckBox
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight=".33"
                android:textSize="16dp"
                android:text="@string/foundation"
                android:id="@+id/checkbox_foundation"/>

            <CheckBox
                android:layout_width="0dp"
                android:layout_weight=".33"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/garage_unit"
                android:id="@+id/checkbox_garage_unit"/>

            <CheckBox
                android:layout_width="0dp"
                android:layout_weight=".33"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/addition"
                android:id="@+id/checkbox_addition"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:textSize="16dp"
                android:text="@string/porch"
                android:id="@+id/checkbox_porch"/>

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:textSize="16dp"
                android:text="@string/balcony"
                android:id="@+id/checkbox_balcony"/>

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:textSize="16dp"
                android:text="@string/other"
                android:id="@+id/checkbox_other"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
