<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jakubkalinowski.contractfoxandroid.LoginActivity"
    android:id="@+id/login_page_layout_id">

    <!-- Login progress -->
    <ImageView
        android:layout_width="223dp"
        android:layout_height="213dp"
        app:srcCompat="@drawable/cfox_logo"
        android:id="@+id/imageView2" />

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <!--<TextView-->
        <!--android:layout_width="311dp"-->
        <!--android:layout_height="100dp"-->
        <!--android:text="Welcome to ContractFox"-->
        <!--android:id="@+id/welcomeText"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:gravity="center_vertical|center_horizontal"-->
        <!--android:textColor="@color/colorPrimary"-->
        <!--android:textSize="30dp" />-->

    <!--<ScrollView-->
        <!--android:id="@+id/login_form"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:id="@+id/email_wrapper_login_activity">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:text="test@gmail.com"
                    android:textColorHint="@color/colorPrimary"
                    android:padding="10dp"
                    android:id="@+id/email_text_input_login_activity"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"

                android:id="@+id/password_wrapper_login_activity">

                <EditText
                    android:id="@+id/password_textInput_login_activity"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:text="password"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:textColorHint="@color/colorPrimary"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/sign_in_button_login_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textSize="15sp"
                android:background="@drawable/button_border"
                android:clickable="true" />

            <Button
                android:id="@+id/register_button_login_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register_button_login_activity"
                android:textStyle="bold"
                android:textSize="15sp"
                android:background="@drawable/button_border2"
                android:clickable="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:id="@+id/forgotPassword"
                android:gravity="center_horizontal"
                android:text="Forgot Password? "
                android:clickable="true"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary" />

            <ProgressBar
                style="@android:style/Widget.ProgressBar.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_gravity="center_horizontal"
                android:id="@+id/progressBar2"
                tools:visibility="invisible"
                android:animationResolution="@integer/google_play_services_version" />


        </LinearLayout>
    <!--</ScrollView>-->
</LinearLayout>